# whatsapp-ecom-bot

./: .env.example  .gitignore  README.md  pyproject.toml
app/: config.py  database.py  llm.py  main.py  prompt.py  session.py
data/: business_info.txt
